@startuml Pattern_Observer_Notification

allowmixing

title Design Pattern - Observer Pattern (Notification System)

' ========== Classic Blue Style (Matching Sequence Diagrams) ==========
skinparam backgroundColor White
skinparam roundcorner 0
skinparam defaultFontName Arial
skinparam defaultFontSize 11

skinparam class {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
    AttributeFontName Arial
    AttributeFontColor Black
    ArrowColor #282828
}

skinparam package {
    BackgroundColor White
    BorderColor #282828
    FontColor Black
    FontStyle bold
    FontName Arial
}

skinparam database {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontColor Black
    FontName Arial
}

skinparam note {
    BackgroundColor #58d2f9
    BorderColor #282828
    FontName Arial
}

skinparam classAttributeIconSize 0

package "Subject (Publisher)" {
    class OrderService {
        - orderDao : OrderDao
        - itemDao : ItemDao
        - notificationService : NotificationService
        ==
        **Publishes Events**
        ..
        + createOrder(...) : String
        + updateOrderStatus(...) : String
    }
}

package "Notifier (Mediator)" {
    class NotificationService {
        - notificationDao : NotificationDao
        ==
        **Creates Notifications**
        ..
        + createNotification(Long, String, String) : void
        + getUserNotifications(Long) : List
        + getUnreadNotifications(Long) : List
        + markAsRead(Long) : void
        + markAllAsRead(Long) : void
    }
}

package "Notification Storage" {
    class Notification {
        - id : Long
        - userId : Long
        - title : String
        - content : String
        - isRead : boolean
        - createdTime : String
    }
}

database "SQLite\nDatabase" as DB

package "Observer (Subscriber)" {
    class MainController {
        - notificationPoller : Timeline
        ==
        **Polls for Updates**
        ..
        - startNotificationPoller() : void
        - checkNewNotifications() : void
        - updateUnreadCount() : void
        - showNotificationBadge() : void
    }
}

' Relationships
OrderService --> NotificationService : publishes events
NotificationService --> Notification : creates
NotificationService --> DB : persists
MainController --> NotificationService : polls
MainController ..> Notification : receives

note right of OrderService
  **Event Publishing:**
  When order status changes:
  1. Update order in DB
  2. Call notificationService
     .createNotification(...)
end note

note bottom of NotificationService
  **Notification Creation:**
  createNotification(
    userId,
    "Order Shipped",
    "Your order has been shipped"
  )
end note

note left of MainController
  **Polling Mechanism:**
  Timeline polls every 5 seconds:
  - Check for new notifications
  - Update badge count
  - Show alerts if needed
end note

note bottom of Notification
  **Stored Events:**
  - New order received
  - Order shipped
  - Order completed
  - etc.
end note

@enduml

